# easy_tracer

./: CMakeLists.txt  README.md
example/: accel_test.cpp  box_test.cpp  cornellbox.cpp  intersection.cpp  local_coordinate.cpp  recursive_texture.cpp  sphere_test.cpp  texture_test.cpp
src/: const.h
src/accel/: accel.cpp  accel.h  accel_kdtree.cpp  accel_kdtree.h  accel_naive.cpp  accel_naive.h  box.cpp  box.h
src/accelerator/: box.cpp
src/camera/: camera.cpp  camera.h  camera_pinhole.cpp  camera_pinhole.h
src/geometry/: geometry.cpp  geometry.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/tensor/: mat3.cpp  mat3.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
src/texture/: texture.cpp  texture.h
